--- a/index.html
+++ b/index.html
@@ -76,17 +76,20 @@
       <h2>هتستفيد إيه؟</h2>
 
       <div class="grid">
-        <div class="card">
+        <div class="card reveal">
+          <div class="card-icon">💬</div>
           <h3>محادثات يومية</h3>
           <p>هتقدر تقدم نفسك وتعمل محادثات يومية.</p>
         </div>
 
-        <div class="card">
+        <div class="card reveal reveal-delay-1">
+          <div class="card-icon">📝</div>
           <h3>جُمل جاهزة</h3>
           <p>هتتعلم جُمل جاهزة للمواقف.</p>
         </div>
 
-        <div class="card">
+        <div class="card reveal reveal-delay-2">
+          <div class="card-icon">💪</div>
           <h3>ثقة من غير توتر</h3>
           <p>هتتغلب على الخوف من الكلام.</p>
         </div>
@@ -98,17 +101,20 @@
       <h2>هيمشي إزاي؟</h2>
 
       <div class="grid">
-        <div class="card">
+        <div class="card reveal">
+          <div class="card-icon">🚀</div>
           <h3>1) اشترك</h3>
           <p>اختار الباقة المناسبة ليك وابدأ فورًا.</p>
         </div>
 
-        <div class="card">
+        <div class="card reveal reveal-delay-1">
+          <div class="card-icon">✏️</div>
           <h3>2) طبّق تمارين يومية</h3>
           <p>تمارين قصيرة وعملية عشان تثبت المعلومة.</p>
         </div>
 
-        <div class="card">
+        <div class="card reveal reveal-delay-2">
+          <div class="card-icon">🤝</div>
           <h3>3) متابعة ودعم</h3>
           <p>دعم مستمر عشان تلتزم وتطور مستواك.</p>
         </div>
@@ -120,17 +126,17 @@
       <h2>آراء مشتركين سابقين</h2>
 
       <div class="grid">
-        <figure class="card">
-          <blockquote>“أول مرة أتكلم من غير توتر بعد أسبوعين!”</blockquote>
+        <figure class="card reveal">
+          <blockquote>"أول مرة أتكلم من غير توتر بعد أسبوعين!"</blockquote>
           <figcaption>— أحمد</figcaption>
         </figure>
 
-        <figure class="card">
-          <blockquote>“التمارين قصيرة وسهلة… وفعلاً بتفرق.”</blockquote>
+        <figure class="card reveal reveal-delay-1">
+          <blockquote>"التمارين قصيرة وسهلة… وفعلاً بتفرق."</blockquote>
           <figcaption>— سارة</figcaption>
         </figure>
 
-        <figure class="card">
+        <figure class="card reveal reveal-delay-2">
           <blockquote>“كنت بخاف أتكلم… دلوقتي بعمل محادثات يومية.”</blockquote>
           <figcaption>— محمد</figcaption>
         </figure>
@@ -138,7 +144,7 @@
     </section>
 
     <!-- FINAL CTA -->
-    <section class="final">
+    <section class="final reveal">
       <div class="card final-card">
         <h2>جاهز تبدأ؟</h2>
         <p class="muted">ابدأ النهارده وخلي المحادثة عادة يومية.</p>
